# c-university

./: CMakeLists.txt  Lesson2.h  NewClass.cpp  NewClass.h  main.cpp
inheritance/: Animal.cpp  Animal.h  AnimalT.cpp  AnimalT.h  Dog.cpp  Dog.h  DogT.cpp  DogT.h  Fox.cpp  Fox.h  FoxT.cpp  FoxT.h
util/: Rectangle.cpp  Rectangle.h  Square.cpp  Square.h
